Revision history for Perl module Lingua::Boolean

{{$NEXT}}
    * Updated documentation

0.001     2010-10-24
    * Initial version