@@ -3,10 +3,11 @@ use warnings;
 use utf8;
 package Lingua::Boolean::English;
 # ABSTRACT: provides English rules to Lingua::Boolean
+# ENCODING: utf-8
 
 =head1 DESCRIPTION
 
-This module provides rules for English to L<Lingua::Boolean>.
+This module provides rules for English to C<Lingua::Boolean>.
 
 =cut
 
