@@ -3,10 +3,11 @@ use warnings;
 use utf8;
 package Lingua::Boolean::French;
 # ABSTRACT: provides French rules to Lingua::Boolean
+# ENCODING: utf-8
 
 =head1 DESCRIPTION
 
-This module provides rules for French to L<Lingua::Boolean>.
+This module provides rules for French to C<Lingua::Boolean>.
 
 =cut
 
