@@ -1,4 +1,5 @@
 [@CorePrep]
+[Encoding]
 
 [Name]
 [Version]
